--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,26 +1,58 @@
 <!doctype html>
 
+
+
 <html>
-<head>
-	<title>My HCI Friends</title>	
-	<meta charset="utf-8">
-	
-</head>
+	<div class="container">
+		<head>
+			<title>My HCI Friends</title>	
+			<meta charset="utf-8">
 
-<body>
-	<h1>My HCI Friends</h1>
+			<!-- add view point -->
+			<meta name="viewpoint" content="width=device-width,initial-scale:=1.0">
 
-	<form id="addFriendForm" role="form" method="get" action="/add">
-		<h3>Add a friend</h3>
-	    <div class="form-group">
-	      <label for="name">Name:</label>
-	      <input type="text" class="form-control" id="name" placeholder="Name" name="name">
-	    </div>
-	    <div class="form-group">
-	      <label for="description">Description:</label>
-	      <input type="text" class="form-control" id="description" placeholder="Description" name="description">
-	    </div>
-	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
-	</form>
-</body>
+			<!-- include js file -->
+			<!-- the later two js files depend on the jquery file -->
+			<script src="js/jquery-1.11.0.js"></script>
+			<script src="js/bootstrap.js"></script>
+			<script src="js/hci-friends.js"></script>
+
+			<link href="css/bootstrap-theme.css" rel="stylesheet">
+			<link href="css/bootstrap.css" rel="stylesheet">
+			<link href="css/hci-friends.css" rel="stylesheet">
+			
+		</head>
+
+		<body>
+			<h1>My HCI Friends</h1>
+
+			{{#each friends}}
+			<div class="friendDiv">
+				<img src="{{imageURL}}" class="img-responsive img-rounded">
+				<a href="#"><h3>{{name}}</h3></a>
+				<p>{{description}}</p>
+			</div>
+			<hr>
+			{{/each}}
+
+
+
+			<form id="addFriendForm" role="form" method="get" action="/add">
+				<h3>Add a friend</h3>
+			    <div class="form-group">
+			      <label for="name">Name:</label>
+			      <input type="text" class="form-control" id="name" placeholder="Name" name="name">
+			    </div>
+			    <div class="form-group">
+			      <label for="description">Description:</label>
+			      <input type="text" class="form-control" id="description" placeholder="Description" name="description">
+			    </div>
+			    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
+			</form>
+
+
+		</body>
+	</div>
 </html>
+
+
